Styling in Calendar and Added click function

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,1 @@
-<div style="margin: 10px; overflow: auto;"><full-calendar [options]="calendarOptions"></full-calendar></div>
+<div style="margin: 30px;"><full-calendar [options]="calendarOptions"></full-calendar></div>
