--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary">
-  <mat-icon aria-hidden="false" aria-label="Example home icon">update</mat-icon> <span> TimeTracker</span>
+    <mat-icon style="margin-left: 20px; margin-right: 5px" aria-hidden="false" aria-label="Example home icon">update</mat-icon> <span> TimeTracker</span>
   </mat-toolbar>
