--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~@fullcalendar/common/main.css';
+@import '~@fullcalendar/list/main.css';
+@import '~@fullcalendar/daygrid/main.css';
+@import '~@fullcalendar/timegrid/main.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Montserrat', sans-serif;}
+
+.fc-button {
+    background-color: white !important;
+    color: #0d47a1 !important;
+    border-color: white !important;
+}
+.fc-button:hover {
+    background-color: rgb(66, 133, 244, 0.1) !important;
+    color: #0d47a1 !important;
+}
+.fc-button-active {
+    border: 0px !important;
+}
+
+.fc-col-header-cell {
+    background-color: rgb(66, 133, 244, 0.1) !important;
+    color: #0d47a1 !important;
+}
+
+.fc-toolbar-title {
+    color: #0d47a1 !important; 
+}
