--- a/src/app/time-entry/time-entry.component.html
+++ b/src/app/time-entry/time-entry.component.html
@@ -5,7 +5,10 @@
 
   <div fxLayout="row" >
     <mat-form-field fxFlex="25">
-      <input matInput placeholder="Date" formControlName="date" />
+      <input matInput placeholder="Date" [matDatepicker]="picker" formControlName="date" />
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </div>
 
